crates/cribo/tests/snapshots/ruff_lint_results@bundle_third_party_local_non_package_parent.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_local_non_package_parent/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
