crates/cribo/tests/snapshots/ruff_lint_results@bundle_third_party_relative_importlib_pruning.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_relative_importlib_pruning/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [
        "Line 170: unused-import - `dropped_pkg` imported but unused; consider using `importlib.util.find_spec` to test for availability",
    ],
    total: 1,
}
